# sms_forwarding

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  partitions_ota_1m6.csv  sdkconfig.defaults
.github/workflows/: build.yml
code/: code.ino  config_types.h  globals.cpp  globals.h  modem.cpp  modem.h  scheduler.cpp  sms_process.cpp  sms_process.h  web_assets.cpp  web_assets.h  web_handlers.cpp  web_handlers.h
code/web_src/: ap.html  app.css  app.js  index.html
code/web_src/panels/: atterm.html  diagnose.html  inbox.html  keepalive.html  log.html  overview.html  push.html  settings.html  sim.html
components/idf_config/: CMakeLists.txt  idf_config.cpp
components/idf_config/include/: idf_config.h
components/idf_esim/: idf_esim.cpp
components/idf_inbox/: CMakeLists.txt  idf_inbox.cpp
components/idf_inbox/include/: idf_inbox.h
components/idf_logbuf/: CMakeLists.txt  idf_log.cpp
components/idf_logbuf/include/: idf_log.h
components/idf_modem/: CMakeLists.txt  idf_modem.cpp
components/idf_modem/include/: idf_modem.h
components/idf_pdu/: CMakeLists.txt  pdulib.cpp
components/idf_push/: CMakeLists.txt  idf_push.cpp
components/idf_push/include/: idf_push.h
components/idf_sms/: CMakeLists.txt  idf_sms.cpp
components/idf_web/: CMakeLists.txt  idf_web.cpp
components/idf_wifi/: CMakeLists.txt  idf_wifi.cpp
components/web_assets/: CMakeLists.txt
dev_doc/: README.md  architecture.md  esp_idf_migration.md  module_details.md
main/: CMakeLists.txt  app_main.cpp
preview/: build_preview.py
tools/: build_web_assets.py  idf.ps1
(+3 files in other folders)
